--- a/註冊表單.html
+++ b/註冊表單.html
@@ -42,9 +42,30 @@
             </div>
             <div class="form-group">
                 <label for="login-right">會員權益</label><input type="checkbox" style="width:20px;" id="login-right">
-                <small class="right"><a href="#" class="right">我已詳細閱讀 : 三井3C網路會員服務條款</a></small>
+                <small class="right">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="right" data-toggle="modal" data-target="#exampleModal">
+                        我已詳細閱讀 : 三井3C網路會員服務條款
+                    </button>
+                      <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="modalTitle" style="font-size: 16px;">會員服務條款</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <div class="modal-body">
+                            ooxxoox
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </small>
             </div>
-            <button type="submit" value="註冊">註冊</button>
+            <button type="submit" value="註冊" class="submit">註冊</button>
         </form>
     </div>
     <footer>
