--- a/註冊表單.html
+++ b/註冊表單.html
@@ -40,15 +40,15 @@
             <div class="form-group">
                 <label for="login-card">會員卡號</label><input type="number" style="width: 61%;" class="ml-4" id="login-card" placeholder="請輸入您的真實姓名">
             </div>
-            <div class="form-group">
-                <label for="login-right">會員權益</label><input type="checkbox" style="width:20px;" id="login-right">
+            <div class="form-group text-center">
+                <input type="checkbox" style="width:20px;" id="login-right">
                 <small class="right">
                     <!-- Button trigger modal -->
-                    <button type="button" class="right" data-toggle="modal" data-target="#exampleModal">
+                    <button type="button" class="right mr-3" data-toggle="modal" data-target="#exampleModal">
                         我已詳細閱讀 : 三井3C網路會員服務條款
                     </button>
                       <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+                    <div class="modal fade text-left" id="exampleModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
                         <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
