--- a/註冊表單.html
+++ b/註冊表單.html
@@ -38,7 +38,7 @@
                 <label for="login-gender">性別</label><input type="radio" style="width: 30px;height:18px;" class="ml-4" id="male" name="gender" value="male">男<input type="radio" style="width: 30px;height:18px;" class="ml-4" id="female" name="gender" value="female">女
             </div>
             <div class="form-group">
-                <label for="login-card">會員卡號</label><input type="number" style="width: 61%;" class="ml-4" id="login-card" placeholder="請輸入您的真實姓名">
+                <label for="login-card">會員卡號</label><input type="number" style="width: 61%;" class="ml-4" id="login-card" placeholder="請輸入您的卡號">
             </div>
             <div class="form-group text-center">
                 <input type="checkbox" style="width:20px;" id="login-right">
