--- a/註冊表單.html
+++ b/註冊表單.html
@@ -71,7 +71,7 @@
     <footer>
         <P class="pt-4 pl-4 text-white">產品諮詢/客戶服務 : 0809-008-001</P>
         <P class="pl-4 text-white">服務時間:週一到週五9:00~18:00例假日除外</P>
-        <p class="text-white text-center pb-4">©三井資訊股份公司</p>   
+        <p class="text-white text-center pb-3 m-0">©三井資訊股份公司</p>    
     </footer>       
 </body>
 </html>
