--- a/註冊表單.html
+++ b/註冊表單.html
@@ -58,7 +58,13 @@
                             </button>
                             </div>
                             <div class="modal-body">
-                            ooxxoox
+                                <div data-spy="scroll" data-target="#navbar-example" data-offset="0" 
+                                style="height:300px;overflow:auto; position: relative;">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, tempora. Maiores laudantium nemo consectetur ut, sed totam eligendi hic perferendis voluptatibus repellat deleniti nisi, fuga debitis placeat similique? Aut ea molestias excepturi atque quam? Tempore aliquam dolores sint error placeat, saepe pariatur, debitis repellendus qui labore sunt dicta in atque?
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, tempora. Maiores laudantium nemo consectetur ut, sed totam eligendi hic perferendis voluptatibus repellat deleniti nisi, fuga debitis placeat similique? Aut ea molestias excepturi atque quam? Tempore aliquam dolores sint error placeat, saepe pariatur, debitis repellendus qui labore sunt dicta in atque?
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, tempora. Maiores laudantium nemo consectetur ut, sed totam eligendi hic perferendis voluptatibus repellat deleniti nisi, fuga debitis placeat similique? Aut ea molestias excepturi atque quam? Tempore aliquam dolores sint error placeat, saepe pariatur, debitis repellendus qui labore sunt dicta in atque?
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, tempora. Maiores laudantium nemo consectetur ut, sed totam eligendi hic perferendis voluptatibus repellat deleniti nisi, fuga debitis placeat similique? Aut ea molestias excepturi atque quam? Tempore aliquam dolores sint error placeat, saepe pariatur, debitis repellendus qui labore sunt dicta in atque?
+                           </div>
                             </div>
                         </div>
                         </div>
@@ -71,7 +77,7 @@
     <footer>
         <P class="pt-4 pl-4 text-white">產品諮詢/客戶服務 : 0809-008-001</P>
         <P class="pl-4 text-white">服務時間:週一到週五9:00~18:00例假日除外</P>
-        <p class="text-white text-center pb-3 m-0">©三井資訊股份公司</p>    
+        <p class="text-white text-center pb-3 m-0">©三井資訊股份公司</p>   
     </footer>       
 </body>
 </html>
