--- a/忘記密碼.html
+++ b/忘記密碼.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/忘記密碼.css">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/bootstrap.js"></script>
 </head>
 <body>
