--- a/訂單查詢.html
+++ b/訂單查詢.html
@@ -92,6 +92,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <div class="modal-body py-0">
+                  <div data-spy="scroll" data-target="#navbar-example" data-offset="0" style="height:680px;overflow:auto; position: relative;">
                     <table class="table modal-table">
                         <tbody>
                             <tr>
@@ -146,15 +147,25 @@
                                   <p class="countPrice m-0">
                                     <span class="count">數量 : 1</span> <span class="price">總價 : $1999</span>
                                   </p>
+                                  <img src="./img/CSET328-狂風勇者.jpg" alt="">
+                                  <p class="m-0 mt-1" id="product-name">[ TP-LINK ]Archer C20 AC750 無線雙頻路由器V4</p>
+                                  <p class="countPrice m-0">
+                                    <span class="count">數量 : 1</span> <span class="price">總價 : $1999</span>
+                                  </p>
+                                  <img src="./img/CSET328-狂風勇者.jpg" alt="">
+                                  <p class="m-0 mt-1" id="product-name">[ TP-LINK ]Archer C20 AC750 無線雙頻路由器V4</p>
+                                  <p class="countPrice m-0">
+                                    <span class="count">數量 : 1</span> <span class="price">總價 : $1999</span>
+                                  </p>
                                 </td>
                             </tr>
-                        </tbody>   
-                    </table>   
+                        </tbody>
+                    </table>
+                  </div> 
                  </div>
                </div>
             </div>
           </div>
-        </div>
       </nav>
       <br>
       <br>
